--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "vant": "^2.11.0",
     "vue": "^2.6.11",
+    "vue-content-loader": "^0.2.3",
     "vue-router": "^3.4.9",
     "vuex": "^3.5.1"
   },
